# breathe-india

./: .gitignore  README.md  backend.env.example  docker-build-and-push.sh  docker-compose.yml  local-dev.sh  nginx.conf
breath-india-backend/: Cargo.toml
breath-india-frontend/: package.json
breathe-india-backend/: .env  .env.example  .exrc  .gitignore  Cargo.toml  Dockerfile  docker-entrypoint.sh  sqlx-data.json
breathe-india-backend/migrations/: 20210427002808_create_users_table.down.sql  20210427002808_create_users_table.up.sql  20210430051540_posts_table.down.sql  20210430051540_posts_table.up.sql  20210504060957_add_verified_admin_options_to_users.down.sql  20210504060957_add_verified_admin_options_to_users.up.sql
breathe-india-backend/src/: jwt.rs  main.rs  models.rs  myres.rs  slog_nested.rs
breathe-india-backend/src/google_jwt/: config.rs  fetch_keys.rs  mod.rs  verify.rs
breathe-india-frontend/: .env  .gitignore  Dockerfile  docker-entrypoint.sh  index.html  package.json  vite.config.js
breathe-india-frontend/src/: App.svelte  api.js  global.d.ts  global.postcss  main.js  utils.js
breathe-india-frontend/src/components/: E404.svelte  Help.svelte  Home.svelte  Me.svelte  NavLink.svelte  Post.svelte  PostDelete.svelte  PostEdit.svelte  PostRow.svelte  Posts.svelte
