[package]
name = "breathe-india-backend"
version = "0.1.0"
authors = ["Farseen <zah4n5dz@anonaddy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
erased-serde = "0.3.13"
jsonwebtoken = "7.2.0"
once_cell = "1.7.2"
reqwest = { version = "0.11.3", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev="801e04bd5369eb39e126c75f6d11e1e9597304d8" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev="801e04bd5369eb39e126c75f6d11e1e9597304d8" , default-features=false, features=["json", "uuid"]}
serde = { version = "1.0.125", features = ["derive"] }
slog = {version = "2.7.0", features = ["nested-values"]}
slog-async = "2.6.0"
slog-json = "2.3.0"
sloggers = "1.0.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
thiserror = "1.0.24"
tokio = "1.5.0"
uuid = { version = "0.8.2", features = ["serde"] }

